# sopro

./: .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
demo/: requirements.txt  server.py
demo/static/: app.js  index.html
src/sopro/: __init__.py  audio.py  cli.py  config.py  constants.py  hub.py  model.py  sampling.py  streaming.py  tokenizer.py
src/sopro/codec/: __init__.py  mimi.py
src/sopro/nn/: __init__.py  blocks.py  embeddings.py  generator.py  nar.py  ref.py  speaker.py  text.py  xattn.py
